# applications/scmRest/api/swagger/swagger.yaml
@@ -12,41 +12,41 @@ consumes:
 produces:
   - application/json
 paths:
-  /shippings:
+  /shipments:
     x-swagger-router-controller: index
     post:
-      description: Add a new shipping to the list
+      description: Add a new shipment to the list
       tags:
-        - Shippings
-      operationId: createShipping
+        - Shipments
+      operationId: createShipment
       parameters:
         - name: asset
-          description: shipping properties
+          description: shipment properties
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Shipping"
+            $ref: "#/definitions/Shipment"
       responses:
         "201":
           description: Success
           schema:
-            $ref: "#/definitions/Shipping"
+            $ref: "#/definitions/Shipment"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     put:
-      description: Update a shipping
+      description: Update a shipment
       tags:
-        - Shippings
-      operationId: updateShipping
+        - Shipments
+      operationId: updateShipment
       parameters:
         - name: asset
-          description: shipping properties
+          description: shipment properties
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Shipping"
+            $ref: "#/definitions/Shipment"
       responses:
         "201":
           description: Success
@@ -57,38 +57,38 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     get:
-      description: Returns a list of all shippings
+      description: Returns a list of all shipments
       tags:
-        - Shippings
-      operationId: getAllShippings
+        - Shipments
+      operationId: getAllShipments
       parameters:
         - name: assetClass
           in: query
           description: assetClass
           required: false
           type: string
-          default: org.warehousenet.shipping
+          default: org.warehousenet.shipment
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/Shippings"
+            $ref: "#/definitions/Shipments"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
             
-  /shippings/{Id}:    
+  /shipments/{Id}:    
     x-swagger-router-controller: index
     get:
-      description: Returns a specific shipping
+      description: Returns a specific shipment
       tags:
-        - Shippings
-      operationId: getShippingById
+        - Shipments
+      operationId: getShipmentById
       parameters:
         - in: path
           name: Id
-          description: shippingId
+          description: shipmentId
           type: string
           required: true
         - name: assetClass
@@ -96,25 +96,25 @@ paths:
           description: assetClass
           required: false
           type: string
-          default: org.warehousenet.shipping
+          default: org.warehousenet.shipment
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/Shipping"
+            $ref: "#/definitions/Shipment"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     delete:
-      description: Returns a specific shipping
+      description: Returns a specific shipment
       tags:
-        - Shippings
-      operationId: deleteShippingbyId
+        - Shipments
+      operationId: deleteShipmentbyId
       parameters:
         - in: path
           name: Id
-          description: shippingId
+          description: shipmentId
           type: string
           required: true
         - name: assetClass
@@ -122,27 +122,27 @@ paths:
           description: assetClass
           required: false
           type: string
-          default: org.warehousenet.shipping
+          default: org.warehousenet.shipment
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/Shipping"
+            $ref: "#/definitions/Shipment"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /shippings/history/{Id}:    
+  /shipments/history/{Id}:    
     x-swagger-router-controller: index
     get:
-      description: Returns history of a shipping
+      description: Returns history of a shipment
       tags:
-        - Shippings
-      operationId: getShippingHistory
+        - Shipments
+      operationId: getShipmentHistory
       parameters:
         - in: path
           name: Id
-          description: shippingId
+          description: shipmentId
           type: string
           required: true
         - name: assetClass
@@ -150,12 +150,12 @@ paths:
           description: assetClass
           required: false
           type: string
-          default: org.warehousenet.shipping
+          default: org.warehousenet.shipment
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/Shippings"
+            $ref: "#/definitions/Shipments"
         default:
           description: Error
           schema:
@@ -303,7 +303,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/Shippings"
+            $ref: "#/definitions/Shipments"
         default:
           description: Error
           schema:
@@ -573,13 +573,13 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
               
-  /sendShipping:    
+  /sendShipment:    
     x-swagger-router-controller: index
     put:
       description: txData
       tags:
         - Transactions
-      operationId: sendShipping
+      operationId: sendShipment
       parameters:
         - name: txData
           description: transaction data
@@ -587,7 +587,7 @@ paths:
           required: true
           schema:
             properties:
-              shippingId:
+              shipmentId:
                 type: string
                 description: Unique identifier representing a shippin
               invoiceId:
@@ -604,19 +604,19 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/Shipping"
+            $ref: "#/definitions/Shipment"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
             
-  /receiveShipping:    
+  /receiveShipment:    
     x-swagger-router-controller: index
     put:
       description: txData
       tags:
         - Transactions
-      operationId: receiveShipping
+      operationId: receiveShipment
       parameters:
         - name: txData
           description: transaction data
@@ -624,14 +624,14 @@ paths:
           required: true
           schema:
             properties:
-              shippingId:
+              shipmentId:
                 type: string
                 description: Unique identifier representing a shippin
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/Shipping"
+            $ref: "#/definitions/Shipment"
         default:
           description: Error
           schema:
@@ -837,45 +837,45 @@ paths:
             $ref: "#/definitions/ErrorResponse"
 
 definitions:
-  Shipping:
+  Shipment:
     properties:
       class:
         type: string
-        description: Unique identifier representing a shipping
-        example: org.warehousenet.shipping
-      shippingId:
+        description: Unique identifier representing a shipment
+        example: org.warehousenet.shipment
+      shipmentId:
         type: string
-        description: Unique identifier representing a shipping
+        description: Unique identifier representing a shipment
       materialId:
         type: string
         description: Unique identifier representing a material
       cutomerId:
         type: string
-        description: Unique identifier representing a shipping  
+        description: Unique identifier representing a shipment  
       supplierId:
         type: string
         description: Unique identifier representing a supplier
       quantity:
         type: string
-        description: Supply quantity of the shipping
+        description: Supply quantity of the shipment
       note:
         type: string
         description: Just a small note
     required:
       - class
-      - shippingId
+      - shipmentId
       - materialId
       - supplierId
-  Shippings:
+  Shipments:
     type: array
     items:
-      $ref: '#/definitions/Shipping'
+      $ref: '#/definitions/Shipment'
 
   Stock:
     properties:
       class:
         type: string
-        description: Unique identifier representing a shipping
+        description: Unique identifier representing a shipment
         example: org.warehousenet.stock
       materialId:
         type: string
@@ -945,7 +945,7 @@ definitions:
       properties:
         class:
           type: string
-          description: Unique identifier representing a shipping
+          description: Unique identifier representing a shipment
           example: org.warehousenet.invoice
         collection:
           type: string
@@ -955,9 +955,9 @@ definitions:
         invoiceId:
           type: string
           description: Unique identifier representing a invoice
-        shippingId:
+        shipmentId:
           type: string
-          description: Unique identifier representing a shipping
+          description: Unique identifier representing a shipment
         supplierId:
           type: string
           description: Unique identifier representing a supplier
@@ -966,7 +966,7 @@ definitions:
           description: Current quantity of the stock
       required:
         - invoiceId
-        - shippingId
+        - shipmentId
         - supplierId
         - invoiceData
   Invoices:
